@@ -10,7 +10,6 @@ DESIGN
 - nonstandard position of 'Reset All' button in all screens
 
 HIGHEST
-- Basics: make beaker wider
 - new colors for pH probe and display (get from YY)
 - ComboBox: add background color behind arrow button (sun#43)
 
