@@ -1,3 +1,6 @@
+12/12/13 Basics: move pH meter down a bit, so that pH value doesn't go off-screen when pH=15
+12/12/13 Basics: tweak layout
+12/12/13 Basics: make beaker wider
 12/12/13 compute water faucet pipe length based on beaker's right edge
 12/12/13 reflect drain faucet, move to left of beaker
 12/12/13 ticks on both sides of beaker, tick labels on right
